# test-luna

./: README.md  build.sh  build.sh.bak
castles/base/: ._capgen.tgz  ._toolchain.tgz  Dockerfile  capgen.tgz
castles/mars1000/: ._mars1000.tgz  Dockerfile
castles/mars1000/pkgconfig/: liblua.pc
castles/mp200/: ._mp200.tgz  Dockerfile
castles/mp200/pkgconfig/: liblua.pc
castles/vega3000/: ._Dockerfile  ._vega3000.tgz  Dockerfile
castles/vega3000/pkgconfig/: liblua.pc
luna/: ._resources  .gitignore  Hardware Build Configuration.txt  Makefile.am  Rakefile  configure.ac  makeso
luna/doc/: ctos-lua.md  https-example.lua  rest_api.md  rest_api.txt  settings-lua.md  tokenizer-lua.md  zmq-lua.md
luna/include/: bindings.h  cli.h  plugin.h  rest_api.h  services.h  ssl_locks.h
luna/include/io/: signals.h
luna/include/plugins/: autoupdate.h
luna/include/services/: bluetooth.h  emv.h  events_proxy.h  input.h  logger.h  settings.h  timer.h  tokenizer.h  touchscreen.h  transactions.h  usb.h  webserver.h  wifi.h
luna/include/util/: api_request.h  base64_helpers.h  curl_utils.h  detokenize_template.h  emv_helpers.h  encryption_helpers.h  files.h  headers_parser.h  jsmn.h  jsmn_helpers.h  lrc.h  luhn.h  machine_id.h  md5_helpers.h  migrations.h  params_parser.h  string_helpers.h  tlv.h  uthash.h
luna/luna-debian-amd64/DEBIAN/: control  shlibs
luna/luna-debian-amd64/usr/share/doc/luna/: copyright
luna/m4/: appilee_device_check.m4  castles.am
luna/resources/: decrypt.pem  emv_config.xml  emvcl_config.xml  encrypt.pem  server.crt  server.key  whitelist.txt
luna/resources/migrations/settings/: 20160412032300_create_settings.sql
luna/resources/migrations/tokens/: 20160512023200_create_tokens.sql
luna/src/: main.c  plugin.c  ssl_locks.c
luna/src/bindings/: lua.c
luna/src/bindings/lua/: ctos.c  device.c  logger.c  lsqlite3.c  printer.c  services.c  settings.c  timer.c  tokenizer.c  xml.c  zmq.c
luna/src/cli/: parse_opts.c
luna/src/plugins/: autoupdate.c  autoupdate_install_castles.c  autoupdate_install_debian.c  backend.c  datetime.c  emv_contact.c  emv_contactless.c  ethernet.c  file.c  keypad.c  pin_entry.c  rs232.c  socket.c
luna/src/services/: bluetooth.c  events_proxy.c  input.c  logger.c  settings.c  timer.c  tokenizer.c  touchscreen.c  usb.c  webserver.c  wifi.c
luna/src/util/: base64_helpers.c  curl_utils.c  detokenize_template.c  emv_helpers.c  encryption_helpers.c  files.c  headers_parser.c  https_request.c  jsmn.c  jsmn_helpers.c  lrc.c  luhn.c  machine_id.c  md5_helpers.c  migrator.c  string_helpers.c  tlv.c
luna/test/: Makefile.am  configure.ac
luna/test/src/: autoupdate_slave_test.c  backend_service_test.c  emv_helpers_test.c  encryption_test.c  files_test.c  headers_parser_test.c  lua_libxml_bindings_test.c  lua_sqlite3_bindings_test.c  lua_tokenizer_test.c  luhn_test.c  settings_service_test.c  string_helpers_test.c  tlv_test.c  tokenizer_test.c
luna/test/web_api_v1/: missing_api_test.rb  transactions_test.rb
