#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(luna, 1.0, sinisterchipmunk@gmail.com)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# AC_CONFIG_AUX_DIR([.autotools])
# AC_CONFIG_SRCDIR([.autotools])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([test])

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_AR
LT_INIT

APPILEE_DEVICE_CHECK()

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT

